# postgresql-to-dbdiagram.io-converter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: sample_schema.sql
src/: __init__.py  cli.py
src/generator/: __init__.py  dbml_generator.py  relationship_builder.py  syntax_validator.py
src/parser/: __init__.py  feature_detector.py  schema_extractor.py  sql_parser.py
src/preprocessor/: __init__.py  parser_prep.py  sql_cleaner.py
src/quality/: __init__.py  compatibility_validator.py  loss_reporter.py  silent_failure_detector.py  six_sigma_metrics.py
src/transformer/: __init__.py  constraint_handler.py  decision_engine.py  feature_processor.py  type_mapper.py
src/utils/: __init__.py  constants.py  error_handling.py  logger.py
tests/: conftest.py  test_integration.py  test_preprocessor.py  test_silent_failures.py  test_transformations.py
tests/fixtures/edge_cases/: README.md  postgresql_edge_case.sql
tests/fixtures/sample_dumps/: simple_schema.sql
